# python_labs

./: .gitignore  README.md  deadlock boot prop.txt  package-lock.json  pyproject.toml
data/lab04/: output.csv
data/lab05/samples/: text.txt
data/lab08/: students_input.json
data/lab09/: students.csv  students_export.json
libs/: arrays.js  tuples.js
src/lab01/: README.md  ex1.js  ex2.js  ex3.js  ex4.js  ex5.js  ex6.js  ex7.js  lab01.js
src/lab02/: 11.py  README.md  ex1.js  ex1.py
src/lab02/libs/: arrays.js  arrays.py  matrixes.js  tuples.js  tuples.py
src/lab03/: README.md  text_stats.py
src/lab03/src/: text_stats.py
src/lab03/src/lib/: text.py
src/lab04/: README.md  io_text_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: group.py
src/lab10/: README.md  double_ended_queue.cpp  linked_list.cpp  stack.cpp
src/lib/: arrays.py  matrixes.py  text.py  tuples.py
src/libs/: arrays.js  matrixes.js  matrixes.py  text.py  tuples.js  tuples.py
src/python_labs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_results/: lab07.txt
tests/: test_json_csv.py  test_text.py
